--- a/recipe-page-main/style.css
+++ b/recipe-page-main/style.css
@@ -67,6 +67,19 @@
   padding: 0;
 }
 
+/* Add heading resets */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  font-weight: inherit;
+  font-size: inherit;
+  line-height: inherit;
+}
+
 /* Improve text rendering */
 html {
   -moz-osx-font-smoothing: grayscale;
@@ -128,56 +141,15 @@ textarea {
   }
 }
 
-/*Mobile First*/
-
-/* Recipe Styles */
-.recipe__card {
-  display: flex;
-  width: 100%;
-  padding: var(--spacing-500) var(--spacing-400);
-  flex-direction: column;
-  align-items: flex-start;
-  gap: var(--spacing-400);
-  align-self: stretch;
-  background: var(--color-white);
-}
-
-.recipe__image {   
-  width: 100%;
-  align-self: stretch;
-  height: 171px;
-}
-
-@media (min-width: 768px) {
-  body {
-   display: flex;
-   width: 100%;
-   padding: var(--spacing-1600) var(--spacing-600);
-   justify-content: center;
-   align-items: center;
-   gap: var(--spacing-100);
-   background: var(--color-stone-100);
-  }
-  
-  .recipe__card {
-    display: flex;    
-    padding: var(--spacing-500);
-    flex-direction: column;
-    align-items: flex-start;
-    gap: var(--spacing-500);
-    flex: 1 0 0;
-    border-radius: var(--spacing-300);
-    background: var(--color-white);
-  }
-}
-@media (min-width: 1440px) {
+/* Global Styles */  
   body {
     display: flex;
+    width: 1440px;
+    padding: var(--spacing-1600) var(--spacing-600);
     justify-content: center;
     align-items: center;
-    padding: var(--spacing-1600) var(--spacing-600);
     gap: var(--spacing-100);
-    background: var(--color-stone-100);    
+    background: var(--color-stone-100);
   }
 
   .recipe {
@@ -193,8 +165,8 @@ textarea {
   }  
 
   .recipe__image {        
-    height: 300px;
-    align-self: stretch;    
+    height: 300px;    
+    align-self: stretch;
     border-radius: var(--spacing-150);       
   }
 
@@ -204,5 +176,23 @@ textarea {
     align-items: flex-start;
     gap: var(--spacing-400);
     align-self: stretch;
+  }
+  
+  .recipe__intro {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: var(--spacing-300);
+    align-self: stretch;
+  }
+
+  .recipe__intro h1 {
+    color: var(--color-stone-900);
+    /* Desktop/text-preset-1 */
+    font-family: var(--font-family-primary);
+    font-size: var(--font-size-h1, 40px);
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%; /* 40px */
   }
 }
