--- a/recipe-page-main/style.css
+++ b/recipe-page-main/style.css
@@ -238,4 +238,100 @@ textarea {
     background-size: 4px;
   }
 
+  .recipe__ingredients {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: var(--spacing-300);
+    align-self: stretch;
+  }
+
+  .recipe__ingredients h2 {
+    color: var(--color-brown-800);
+    /* Desktop/text-preset-3 */
+    font-family: var(--font-family-primary);
+    font-size: var(--font-size-h2);
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%; /* 20px */
+  }
+
+  .recipe__ingredients ul {
+    display: flex;
+    flex-direction: column;
+    gap: var(--spacing-100);
+    padding-left: var(--spacing-100);
+    
+  }
+
+  .recipe__ingredients ul li {
+    padding-left: var(--spacing-400);            
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4' fill='none'%3E%3Ccircle cx='2' cy='2' r='2' fill='%23854632'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: left center;
+    background-size: 4px;
+    color: var(--color-stone-600);
+    /* Desktop/text-preset-4 */
+    font-family: var(--font-family-secondary);
+    font-size: var(--font-size-body);
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; /* 24px */
+  }
+
+  hr,
+  .recipe__divider {
+    width: 656px;
+    height: 1px;
+    background: var(--color-stone-150);
+    margin: 0;
+    padding: 0;
+    border: none;
+  }
+
+  .recipe__instructions {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: var(--spacing-300);
+    align-self: stretch;
+  }
+
+  .recipe__instructions h2 {
+    color: var(--color-brown-800);
+    /* Desktop/text-preset-3 */
+    font-family: var(--font-family-primary);
+    font-size: var(--font-size-h2);
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%; /* 28px */
+  }
+
+  .recipe__instructions ol {
+    display: flex;
+    flex-direction: column;
+    gap: var(--spacing-100);
+    padding-left: var(--spacing-100);
+    list-style: none;
+    counter-reset: recipe-steps;
+  }  
+
+  .recipe__instructions ol li {
+    padding-left: var(--spacing-400);
+    position: relative;
+    color: var(--color-stone-600);
+    font-family: var(--font-family-secondary);
+    font-size: var(--font-size-body);
+    line-height: 150%;
+  }
+
+  .recipe__instructions ol li::before {
+    counter-increment: recipe-steps;
+    content: counter(recipe-steps) ".";
+    position: absolute;
+    left: 0;
+    color: var(--color-brown-800);
+    font-weight: bold;
+  }
+
   
