--- a/recipe-page-main/style.css
+++ b/recipe-page-main/style.css
@@ -425,11 +425,24 @@ textarea {
       min-height: auto;
     }    
     
-    .recipe__image {     
-      
+    .recipe {
+      padding: unset;
+      border-radius: unset;
+      gap: unset;       
+    }
+
+    .recipe__image {      
+      width: 100%;
       height: 171px;
-      object-fit: cover;      
+      object-fit: cover;     
       border-radius: 0;      
+    }
+
+    .recipe__card {     
+      display: flex; 
+      flex-direction: column;
+      padding: var(--spacing-500) var(--spacing-400);
+      gap: var(--spacing-400);
     }
            
     .recipe__intro h1 {
