--- a/recipe-page-main/style.css
+++ b/recipe-page-main/style.css
@@ -1,7 +1,7 @@
 /* Font Face Declarations */
 @font-face {
   font-family: 'Young Serif';
-  src: url('./assets/fonts/young-serif/YoungSerif-Regular.ttf') format('truetype');
+  src: url('../recipe-page-main/assets/fonts/young-serif/YoungSerif-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -9,7 +9,7 @@
 
 @font-face {
   font-family: 'Outfit';
-  src: url('./assets/fonts/outfit/Outfit-VariableFont_wght.ttf') format('truetype-variations');
+  src: url('../recipe-page-main/assets/fonts/outfit/Outfit-VariableFont_wght.ttf') format('truetype-variations');
   font-weight: 100 900;
   font-style: normal;
   font-display: swap;
