--- a/product-preview-card-component-main/style.css
+++ b/product-preview-card-component-main/style.css
@@ -36,15 +36,15 @@ body {
   background-color: var(--clr-secondary);
   min-height: 100vh;
   margin: 0;
-  display: grid;
-  place-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-/* Mobile First */
 main {
-  width: min(var(--mobile-width), 100%);
+  width: 100%;
   min-height: 100vh;
-  padding: 1.75rem 1rem;
+  padding: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -57,12 +57,12 @@ main {
   display: grid;
   grid-template-columns: 1fr;
   width: 100%;
-  max-width: 343px;
+  max-width: 331px;
 }
 
 .product-card__image-container {
   margin: 0;
-  height: 100%;
+  height: 15rem;
 }
 
 .product-card__image {
@@ -140,22 +140,17 @@ main {
 /* Desktop Styles */
 @media screen and (min-width: 600px) {
   main {
-    width: var(--desktop-width);
     padding: 10.9375rem 26.25rem;
+    max-width: var(--desktop-width);
+    height: 50rem;
   }
 
   .product-card {
-    grid-template-columns: repeat(2, 1fr);
     max-width: 600px;
+    grid-template-columns: repeat(2, 1fr);
   }
-}
 
-/* Mobile Styles */
-@media screen and (max-width: 599px) {
-  main {
-    width: 23.4375rem; /* 375px */
-    height: 41.6875rem;
-    padding: 1.75rem 1rem;
-    flex-direction: column;
+  .product-card__image-container {
+    height: 100%;
   }
 }
