--- a/four-card-feature-section-master/css/style.css
+++ b/four-card-feature-section-master/css/style.css
@@ -22,8 +22,7 @@ body {
 .hero {
     text-align: center;
     width: min(100%, 540px);    
-    margin-bottom: 48px;
-    margin-inline: auto;
+    margin: 80px auto 48px;
 }
 
 .hero__title {
@@ -56,7 +55,7 @@ body {
     background-color: white;
     border-radius: 8px;
     box-shadow: var(--shadow-lg);
-    padding: 24px;
+    padding: 32px;
     position: relative;
     overflow: hidden;
     width: min(100%, 350px);
@@ -103,7 +102,7 @@ body {
     }
 
     .hero {
-        margin-bottom: 48px;
+        margin: 80px auto 48px;
         padding: 0;
     }
 
