style(hero): 🎨 center align hero description text

--- a/four-card-feature-section-master/css/style.css
+++ b/four-card-feature-section-master/css/style.css
@@ -38,9 +38,8 @@ body {
 }
 
 .hero__description {
-    max-width: 50ch;
-    margin-inline: auto;
     line-height: 1.6;
+    text-align: center;
 }
 
 /* Features Section */
