--- a/testimonials-grid-section-main/css/style.css
+++ b/testimonials-grid-section-main/css/style.css
@@ -91,19 +91,22 @@ body {
 }
 
 .testimonial__status {
-    font-size: calc(var(--font-size-base) - 1px);
+    font-size: 11px;
+    line-height: 11px;
     opacity: 0.5;
 }
 
 .testimonial__highlight {
-    font-size: calc(var(--font-size-base) + 2px);
+    font-size: 20px;
     font-weight: 600;
     margin-bottom: var(--space-sm);
+    line-height: normal;
 }
 
 .testimonial__quote {
     opacity: 0.7;
-    line-height: var(--line-height-body);
+    font-size: 13px;
+    line-height: 18px;
 }
 
 /* Testimonial Variants */
@@ -146,6 +149,8 @@ body {
     .testimonial--kira {
         grid-column: 4;
         grid-row: 1 / span 2;
+        width: 255px;
+        height: 572px;
     }
 
     .testimonial--darker {
